[package]
name = "llms-from-scratch-burn"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "0.19.1", features = ["dataset"] }
clap = { version = "4.5.53", features = ["derive"] }
env_logger = { version = "0.11.8", features = ["kv"] }
log = { version = "0.4.29", features = ["kv"] }
regex = "1.12.2"
reqwest = { version = "0.12.28", features = ["json", "blocking"] }
tempfile = "3.24.0"
tiktoken-rs = "0.9.1"
